--- a/h2.html
+++ b/h2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to my second website</h1>
+    <h1>Welcome to my second KESH website</h1>
     <p><p>Curious enthusiast for knowledge with organizational skills and teamwork for the purpose of achieving a common goal for the betterment of the team and its members. I am self-motivated under right conditions and available necessary resources. I like change (upgrade (under right circumstances)).</p></p>
     <p><p>Curious enthusiast for knowledge with organizational skills and teamwork for the purpose of achieving a common goal for the betterment of the team and its members. I am self-motivated under right conditions and available necessary resources. I like change (upgrade (under right circumstances)).</p></p>
     <p><p>Curious enthusiast for knowledge with organizational skills and teamwork for the purpose of achieving a common goal for the betterment of the team and its members. I am self-motivated under right conditions and available necessary resources. I like change (upgrade (under right circumstances)).</p></p>
